--- a/package.json
+++ b/package.json
@@ -6,9 +6,16 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bootstrap": "^4.5.3",
+    "firebase": "^7.24.0",
+    "moment": "^2.29.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react-scripts": "3.4.4"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.4",
+    "react-scroll-to-bottom": "^4.0.0",
+    "reactstrap": "^8.6.0",
+    "yarn": "^1.22.10"
   },
   "scripts": {
     "start": "react-scripts start",
